fixed menu position on small devices

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: end;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .logo {
